<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThankYou Trust</string>
    <string name="title_activity_register">Thankyou Charitable Trust</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_account">Registration</string>
    <string name="post">Post</string>
    <string name="message">message</string>
    <string name="home">Home</string>
    <string name="placeholder">Placeholder</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="message_name_placeholder">Profile Pic Goes Here</string>
    <string name="placeholderName">User Name Goes Here</string>
    <string name="title_activity_single_project">SingleProject</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_projects">ProjectsActivity</string>
    <string name="postalCodeTitle">Postal Code:</string>
    <string name="applicantNameTitle">Applicant Name:</string>
    <string name="fundsRequestedTitle">Funds:</string>
    <string name="useOfFundsTitles">Use Of Funds:</string>
    <string name="projects">Projects</string>
    <string name="title_activity_project_details">ProjectDetailsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="prompt_city">City</string>
    <string name="prompt_suburb">Suburb</string>
    <string name="prompt_postcode">Postcode</string>
    <string name="profile">Profile</string>
    <string name="update_details">Update Details</string>
    <string name="name">Name</string>
    <string name="location">Address Unknown</string>
    <string name="edit_info">Edit Personal Info</string>
    <string name="edit_location">Edit Address Info</string>
    <string name="change_pw">Change Password</string>
    <string name="enter_pw">Enter your password to save changes</string>
    <string name="prompt_address">Address</string>
    <string name="current_pw">Enter your current password</string>
    <string name="new_pw">Enter new password</string>
    <string name="prompt_old_pw">Old Password</string>
    <string name="prompt_new_pw">New Password</string>
    <string name="action_back">Back</string>
    <string name="title_activity_admin_home_page">AdminHomePage</string>
    <string name="title_activity_admin_all_users">AdminAllUsers</string>
    <string name="admin">Admin</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_admin_all_communities">AdminAllCommunities</string>
    <string name="title_activity_admin_reports">AdminReports</string>
    <string name="admin_alert_btn_submit">Submit</string>
    <string name="admin_alert_btn_cancel">Cancel</string>
    <string name="title_activity_confirm_dialog">ConfirmDialog</string>
    <string name="title_activity_admin_users_profile">AdminUsersProfile</string>
    <string name="options">Options</string>
    <string name="prompt_home_address">Home Address</string>
    <string name="select_community">Choose a community to register for:</string>
    <string name="fragment_project_details_notes_title">Project Notes:</string>
    <string name="fragment_project_details_notes_placeholder">You have no notes on this project yet.</string>
    <string name="edit_project_notes">Add a Personal Note</string>
    <string name="title_activity_admin_message_board">AdminMessageBoard</string>
    <string name="community_post_code">Community Post Code</string>
    <string name="all_users">All Users</string>
    <string name="phone_number">Phone Number:</string>
    <string name="st_address">Address:</string>
    <string name="community">Community:</string>
    <string name="city">City:</string>
    <string name="suburb">Suburb:</string>
    <string name="prompt_phone">Primary Phone Number</string>
    <string name="title_activity_admin_single_project_report">AdminSingleProjectReport</string>
    <string name="title_admin_single_report_not_rated">Not Yet Rated By:</string>
    <string name="all_fields_required">Note: All fields are required</string>
    <string name="title_activity_grant_rounds">Grant Rounds</string>
    <string name="all_communities">All Communities</string>
    <string name="admin_options">Administrative Tools:</string>
    <string name="empty_string"/>
    <string name="community_name">Community Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="grant_round_start_date">Grant round start date</string>
    <string name="grant_round_end_date">Grant round end date</string>
    <string name="dd">dd</string>
    <string name="mm">mm</string>
    <string name="yyyy">yyyy</string>
    <string name="adminEmptyProjectListText">There have been no projects submitted for this grant round.</string>

</resources>
