<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mesageboard.MainActivity" >

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_projects"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/projects"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:title="@string/profile"/>      
        
     <item 
    	android:id="@+id/admin"
        android:title="@string/admin"
        android:orderInCategory="400"
        android:visible="true"
        android:showAsAction="ifRoom"/>   
        
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/logout"/>
</menu>