<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal|center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_welcome_logo"
        android:layout_width="164dp"
        android:layout_height="140dp"
        android:src="@drawable/tyctlogo" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/blue_button"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/blue_button"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/blue_button"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/blue_button"
        android:text="@string/register" />

    <Button
        android:id="@+id/btnAboutUs"
        style="@style/blue_button"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/blue_button"
        android:text="@string/about_us" />
    
</LinearLayout>
