<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tyct.thankyoutrust.AdminAllUsers" >

    <TextView
        android:id="@+id/reg_community"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_users"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:textColor="#699ffc"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvUserNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#699ffc" />

        <TextView
            android:id="@+id/tvCommunityPC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/community_post_code"
            android:textColor="#84A961" 
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ListView
        android:id="@+id/lstvewuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingTop="3dp">
    </ListView>

</LinearLayout>
