<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/projectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_gravity="center_horizontal|top"
=======
>>>>>>> BlairDev
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
        <TextView
            android:id="@+id/postCodeTitle"
<<<<<<< HEAD
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
=======
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
>>>>>>> BlairDev
            android:text="@string/postalCodeTitle" />

        <TextView
            android:id="@+id/applicantNameTitle"
<<<<<<< HEAD
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
=======
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
>>>>>>> BlairDev
            android:text="@string/applicantNameTitle" />

        <TextView
            android:id="@+id/postalCode"
<<<<<<< HEAD
            android:layout_width="wrap_content"
=======
            android:layout_width="match_parent"
>>>>>>> BlairDev
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="TextView" />

        <TextView
            android:id="@+id/applicantName"
<<<<<<< HEAD
            android:layout_width="wrap_content"
=======
            android:layout_width="match_parent"
>>>>>>> BlairDev
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="TextView" />

        <TextView
            android:id="@+id/fundsRequestedTitle"
<<<<<<< HEAD
            android:layout_width="wrap_content"
=======
            android:layout_width="match_parent"
>>>>>>> BlairDev
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/fundsRequestedTitle" />

        <TextView
            android:id="@+id/fundsRequested"
<<<<<<< HEAD
            android:layout_width="wrap_content"
=======
            android:layout_width="match_parent"
>>>>>>> BlairDev
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="TextView" />

        <TextView
            android:id="@+id/useOfFundsTitle"
<<<<<<< HEAD
            android:layout_width="wrap_content"
=======
            android:layout_width="match_parent"
>>>>>>> BlairDev
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/useOfFundsTitles" />

        <TextView
            android:id="@+id/useOfFunds"
<<<<<<< HEAD
            android:layout_width="wrap_content"
=======
            android:layout_width="match_parent"
>>>>>>> BlairDev
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="TextView" />

        <TextView
            android:id="@+id/projectBlurb"
<<<<<<< HEAD
            android:layout_width="wrap_content"
=======
            android:layout_width="match_parent"
>>>>>>> BlairDev
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="blurb" />

        <RatingBar
            android:id="@+id/projectRatingBar"
<<<<<<< HEAD
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:isIndicator="false"
            android:numStars="10"
            android:stepSize="1" />
=======
            android:numStars="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
>>>>>>> BlairDev

	</LinearLayout>
</LinearLayout>
