<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tyct.thankyoutrust.ProfileActivity" >

    <LinearLayout
        android:id="@+id/llProfileTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/profile_place_holder"
            android:contentDescription="@string/message_name_placeholder"/>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvProfName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/placeholderName" />

            <TextView
                android:id="@+id/tvProfEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:text="@string/prompt_email" />

            <TextView
                android:id="@+id/tvPPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="end"
                android:text="Phone Number" />

        </LinearLayout>
    </LinearLayout>
    
      <TextView
                android:id="@+id/tvPStreetAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Stree Address" />
  <TextView
                android:id="@+id/tvPSuburb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Suburb" />
  
  <TextView
                android:id="@+id/tvPCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="City" />
  
  <TextView
                android:id="@+id/tvPCommunity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Community" />
  
    <Button
        android:id="@+id/btnDetails"
        style="@style/blue_button"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/blue_button"
        android:text="@string/options" />

</LinearLayout>
</ScrollView>